Fixed mobile layout. Changed to use the same breakpoint as bootstrap to avoid content jumping around.

--- a/css/index.css
+++ b/css/index.css
@@ -114,7 +114,8 @@ hr {
     position: sticky;
     bottom: 2rem;
     border-radius: 40px;
-    width: calc((24px + 5rem) * 6);
+    width: 100%;
+    /* width: calc((24px + 5rem) * 6); */
 }
 
 .roundedbottom a {
@@ -185,7 +186,7 @@ hr {
     height: 14rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 576px) {
     .vertical-center {
         min-height: 88%;
         min-height: 88vh;
@@ -225,48 +226,26 @@ hr {
         border-radius: 50%;
     }
 
+    .horizontal-center {
+        width: 100vw;
+    }
+
     .roundedbottom {
-        height: 2.5rem;
-        background: rgb(20, 20, 20);
-        color: rgb(220, 220, 220);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: sticky;
-        bottom: 1rem;
-        border-radius: 1.25rem;
-        margin: auto;
-        width: calc((3.4rem) * 7);
+        height: 64px;
+
+        padding-left: 1em;
+        padding-right: 1em;
     }
 
     .roundedbottom a {
-        padding: 0 0;
-    }
-
-    .roundedbottom a:hover {
-        display: block;
-        position: sticky;
-        padding: 0 0;
-        background-color: inherit;
+        width: 100%;
     }
 
     .bottomitem {
-        width: 1.2rem;
-        /* padding: 8px 0.9rem; */
-    }
+        width: 100%;
 
-    .bottomitem a {
-        padding: 0 0;
-    }
-
-    .bottomitem svg {
-        width: 1.2rem;
-        height: auto;
-    }
-
-    .bottomitem.github svg {
-        width: 1.7rem;
-        height: auto;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     /* .github a:hover {
